--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@bit/dhruv610.navbar.navbar": "0.0.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
